Updates words lists, fixed some bugs, changed style.css and game.css, and added some functionality. Game is ready!

--- a/html/armenian.html
+++ b/html/armenian.html
@@ -18,7 +18,7 @@
     <div class="content">
       <div class="word"></div>
       <div class="details">
-        <p class="time">Մնաց։ <span><b>30</b></span> վայրկյան</p>
+        <p class="time">Մնաց։ <span><b>45</b></span> վայրկյան</p>
       </div>
       <input type="text" placeholder="Գրիր ճիշտ բառը">
       <div class="btns">
@@ -30,8 +30,8 @@
   </div>
    
 
-    <!-- <script src="../js/words.js" defer></script>
-    <script src="../js/armenian.js" defer></script> -->
+    <script src="../js/words.js" defer></script>
+    <script src="../js/armenian.js" defer></script>
 </body>
 
 </html>
