--- a/html/russian.html
+++ b/html/russian.html
@@ -18,9 +18,9 @@
     <div class="content">
       <div class="word"></div>
       <div class="details">
-        <p class="time">Осталось: <span><b>30</b></span> cекунда</p>
+        <p class="time">Осталось: <span><b>45</b></span> cекунда</p>
       </div>
-      <input type="text" placeholder="Type right word">
+      <input type="text" placeholder="Введите правильное слово">
       <div class="btns">
         <button class="refresh">Изменить слово</button>
         <button class="check">Проверить слово</button>
