--- a/html/english.html
+++ b/html/english.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" href="../img/a.png">
   <link rel="stylesheet" href="../gamecss/game.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
